--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,23 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\mohammadzm\\OneDrive\\Documents\\GitHub\\mzm.app\\index.html"
+            "file": "c:\\Users\\mohammadzm\\OneDrive\\Documents\\GitHub\\mzm.app\\index.html",
+            "configurations": [
+                {
+                    "name": "Launch Chrome",
+                    "request": "launch",
+                    "type": "chrome",
+                    "url": "http://localhost:8080",
+                    "webRoot": "${workspaceFolder}"
+                },
+            {
+                "name": "Attach to Chrome",
+                "port": 9222,
+                "request": "attach",
+                "type": "chrome",
+                "webRoot": "${workspaceFolder}"
+            }
+            ]
         }
     ]
 }
